--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,7 @@
     <string name="app_name">MyMovie</string>
     <string name="movie">Movies</string>
     <string name="tv_series">Tv Series</string>
+    <string name="my_favorites">My Favorite</string>
     <string name="title_list">Avenger Infinity War</string>
     <string name="rating">9,3</string>
     <string name="popularity">Popularity</string>
@@ -12,6 +13,8 @@
     <string name="image_detail">Image Detail</string>
     <string name="release_date">Release Date</string>
     <string name="item_list_movie">Item list Movie</string>
+    <string name="success_add_favorite">Successfully added to my favorites</string>
+    <string name="success_delete_favorite">successfully deleted from my favorites</string>
 
     <string-array name="month">
         <item>January</item>
@@ -121,4 +124,5 @@
         "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
         "when a user tries to pick up one of cards.\n\n"
     </string>
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
